removed (reading time), fixed link area in sidebar and stretched to full screen, increased the input area of the form

--- a/src/app/pages/single-news/sections/comments/single-news-comments.component.scss
+++ b/src/app/pages/single-news/sections/comments/single-news-comments.component.scss
@@ -25,7 +25,7 @@ button {
   border: 0.1rem solid var(--black);
   & textarea {
     display: flex;
-    max-width: 100%;
+    width: 100%;
     outline: none;
     border: none;
     resize: none;
